Remove free trial references from website and terms

--- a/index.html
+++ b/index.html
@@ -601,8 +601,8 @@
                             <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/>
                         </svg>
                     </div>
-                    <h3>7-Day Free Trial</h3>
-                    <p>Try all premium features free for a week. No commitment, cancel anytime.</p>
+                    <h3>Cancel Anytime</h3>
+                    <p>No commitment. Cancel your subscription anytime in your device settings.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
@@ -635,7 +635,7 @@
                 <img src="screenshots/4_history_1242x2688.png" alt="SnapCal Meal History - Log Every Meal">
             </div>
             <div class="screenshot-item">
-                <img src="screenshots/5_paywall_1242x2688.png" alt="SnapCal Pro - 7-Day Free Trial">
+                <img src="screenshots/5_paywall_1242x2688.png" alt="SnapCal Pro - Unlock Premium Features">
             </div>
             <div class="screenshot-item">
                 <img src="screenshots/6_goals_1242x2688.png" alt="SnapCal Goals - Personalized For You">
@@ -663,7 +663,7 @@
                     <div class="savings">Save 71%</div>
                 </div>
             </div>
-            <p style="text-align: center; margin-top: 30px; color: var(--text-secondary);">All plans include a 7-day free trial. Cancel anytime.</p>
+            <p style="text-align: center; margin-top: 30px; color: var(--text-secondary);">All subscriptions auto-renew. Cancel anytime in Settings.</p>
         </div>
     </section>
 
